# SomeIP

./: README.md
00_test_example/src/: CMakeLists.txt  client-example.cpp  service-example.cpp  vsomeip.json
01_ClientServerTrial/: CMakeLists.txt  client-example.cpp  service-example.cpp
02_AosoRpiTest/Pc/someipclient/: CMakeLists.txt  helloworld-local.json  init.someipclient.rc
02_AosoRpiTest/Pc/someipserver/: CMakeLists.txt  helloworld-local.json
02_AosoRpiTest/Rpi4/someipclient/: Android.bp
02_AosoRpiTest/Rpi4/someipserver/: Android.bp  CMakeLists.txt  hello_world_service_main.cpp  server-local.json
03_testEventSubscribe/: README.md
03_testEventSubscribe/Pc/someipclient/: Android.bp  hello_world_client.hpp
03_testEventSubscribe/Pc/someipserver/: hello_world_service.hpp  hello_world_service_main.cpp  helloworld-local.json
03_testEventSubscribe/Rpi4/someipclient/: CMakeLists.txt  client-local.json
